--- a/SourceCode/2023/Dec2023/YeafiAL/TASK 26/Main.xaml
+++ b/SourceCode/2023/Dec2023/YeafiAL/TASK 26/Main.xaml
@@ -93,6 +93,8 @@
             <av:Point x:Key="ShapeLocation">233.2,139.2</av:Point>
             <av:Size x:Key="ShapeSize">134,62.666666666666664</av:Size>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
+            <x:Double x:Key="StateContainerWidth">100</x:Double>
+            <x:Double x:Key="StateContainerHeight">25</x:Double>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <State.Exit>
