--- a/SourceCode/2023/Dec2023/chandrika/Task-27/Subtraction.xaml
+++ b/SourceCode/2023/Dec2023/chandrika/Task-27/Subtraction.xaml
@@ -7,7 +7,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>651,507</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>592,465</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Subtraction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -90,9 +90,9 @@
         <OutArgument x:TypeArguments="x:Int32">[Out_SubResult]</OutArgument>
       </Assign.To>
       <Assign.Value>
-        <InArgument x:TypeArguments="x:Int32">[In_Num1+In_Num2]</InArgument>
+        <InArgument x:TypeArguments="x:Int32">[In_Num1-In_Num2]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;The Result of Subtraction is &quot; + Out_SubResult]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;The Result of Subtraction is &quot; + Out_SubResult.ToString]" />
   </Sequence>
 </Activity>
